<resources>
    <string name="app_name">Event Mode</string>
    <string name="login_button_text">Login</string>
    <string name="signup_button_text">Sign up</string>
    <string name="logingoogle_button_text">Google Sign in</string>
    <string name="username_hint">Display name</string>
    <string name="password_hint">Password</string>
    <string name="create_account_text">Create Account</string>
    <string name="email_hint">Email</string>
    <string name="signup_empty_fields">Please fill out all fields</string>
    <string name="passwords_dont_match">Passwords dont match</string>
    <string name="settings_nav">Settings</string>
    <string name="friends_nav">Friends</string>
    <string name="event_nav">Event</string>
    <string name="create_event">Create event</string>
    <string name="add_friend">Add friend</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_title">Enter title</string>
    <string name="add_button_text">+ Add</string>
    <string name="invite_friends">Invite friends</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="enter_event_description">Enter event description</string>
    <string name="enter_event_theme">Enter event theme</string>
    <string name="placeholder">placeholder</string>
    <string name="done">Done</string>
    <string name="pick_a_location">Pick a location</string>
    <string name="title_activity_google_maps">Map</string>
    <string name="location_toast">Pick a location for the event</string>
    <string name="accept_button">+ Accept</string>
    <string name="chat_button">💬 Chat</string>
    <string name="permission_granted">permission granted</string>
    <string name="search_for_user">Search for user</string>
    <string name="event_was_created">Event was created!</string>
    <string name="my_events">My events</string>
    <string name="added_button_text">✓ Added</string>
    <string name="update_event">Update event</string>
    <string name="delete_event">Delete event</string>
    <string name="is_typing">◦ ◦ ◦</string>
    <string name="message_too_long">Message limit is 300 characters</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_confirmation">Are you sure?</string>
    <string name="event_was_updated">Event was updated</string>
    <string name="event_was_deleted">Event was deleted</string>
    <string name="fill_all_fields">Please fill all fields</string>
    <string name="where">Where?</string>
    <string name="when">When?</string>
    <string name="event_was_accepted">Event was accepted</string>
    <string name="event_was_declined">Event was declined</string>
    <string name="appwidget_text">Event</string>
    <string name="add_widget">Add widget</string>
    <string name="location">Location</string>
    <string name="no_my_events_text">My events - You have not created any events</string>
    <string name="read_more">Read more</string>
    <string name="attendance_status">Attendance:</string>
    <string name="logout_text">Logout</string>
    <string name="change_password_text">Change password</string>
</resources>