<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="269dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35000002">

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_weight="2"
            android:background="@drawable/edittext_rounded_corners"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/email_hint"
            android:textColorHint="@color/Grey"
            android:textColor="@color/Grey"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="7dp"
            android:layout_weight="2"
            android:background="@drawable/edittext_rounded_corners"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/password_hint"
            android:textColorHint="@color/Grey"
            android:textColor="@color/Grey"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginTop="7dp"
            android:background="@drawable/rounded_corners"
            android:text="@string/login_button_text"
            android:textColor="@color/AlmostBlack"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="267dp"
        android:layout_height="180dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.78">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="OR"
            android:textAlignment="center"
            android:textColor="@color/WhiteGrey"
            android:textSize="24sp"></TextView>

        <Button
            android:id="@+id/signupBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_corners"
            android:text="@string/signup_button_text"
            android:textColor="@color/AlmostBlack" />

        <Button
            android:id="@+id/loginGoogleBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_corners"
            android:text="@string/logingoogle_button_text"
            android:textColor="@color/AlmostBlack" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>