<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".event.ThisEventActivity"
    android:background="@color/backgroundColor"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/eventTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/edittext_rounded_corners"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/Grey"
            android:textColorHint="@color/Grey"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/eventTheme"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/edittext_rounded_corners"
            android:hint="@string/enter_event_theme"
            android:padding="10dp"
            android:textColor="@color/Grey"
            android:textColorHint="@color/Grey" />

        <TextView
            android:id="@+id/eventDescription"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/edittext_rounded_corners"
            android:gravity="top"
            android:hint="@string/enter_event_description"
            android:padding="10dp"
            android:textColor="@color/Grey"
            android:textColorHint="@color/Grey" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="70dp"
                android:layout_height="49dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/edittext_rounded_corners"
                android:padding="10dp"
                android:singleLine="true"
                android:text="@string/when"
                android:textColor="@color/Grey"
                android:textColorHint="@color/Grey" />

            <TextView
                android:id="@+id/eventDate"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/edittext_rounded_corners"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/Grey"
                android:textColorHint="@color/Grey" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="70dp"
                android:layout_height="49dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/edittext_rounded_corners"
                android:padding="10dp"
                android:singleLine="true"
                android:text="@string/where"
                android:textColor="@color/Grey"
                android:textColorHint="@color/Grey" />

            <Button
                android:id="@+id/locationButton"
                android:layout_width="0dp"
                android:layout_height="49dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:text="@string/location"
                android:textColor="@color/AlmostBlack"
                android:textSize="14sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <Button
                android:id="@+id/inviteAcceptBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/yes"
                android:textColor="@color/AlmostBlack"
                android:textSize="14sp" />

            <Button
                android:id="@+id/inviteDeclineBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/no"
                android:textColor="@color/AlmostBlack"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>