<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".CreateEventActivity"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/event_title"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/edittext_rounded_corners"
            android:padding="10dp"
            android:hint="@string/enter_title"
            android:textColorHint="@color/Grey"
            android:textColor="@color/Grey"/>

        <EditText
            android:id="@+id/event_theme"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/edittext_rounded_corners"
            android:padding="10dp"
            android:hint="@string/enter_event_theme"
            android:textColorHint="@color/Grey"
            android:textColor="@color/Grey"/>

        <EditText
            android:id="@+id/event_description"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/edittext_rounded_corners"
            android:gravity="top"
            android:padding="10dp"
            android:hint="@string/enter_event_description"
            android:textColorHint="@color/Grey"
            android:textColor="@color/Grey"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">
            <Button
                android:id="@+id/pickDateBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:textSize="14sp"
                android:textColor="@color/AlmostBlack"
                android:drawableTop="@drawable/ic_event"
                android:drawableTint="@color/AlmostBlack" />
            <Button
                android:id="@+id/invite_Friends_Btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:text="Invite"
                android:textSize="14sp"
                android:textColor="@color/AlmostBlack"
                android:drawableTop="@drawable/ic_person_"
                android:drawableTint="@color/AlmostBlack" />
            <Button
                android:id="@+id/googleMapsBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="0dp"
                android:text="Location"
                android:textSize="14sp"
                android:textColor="@color/AlmostBlack"
                android:drawableTop="@android:drawable/ic_dialog_map"
                android:drawableTint="@color/AlmostBlack"/>
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/updateEventBtn"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_corners"
            android:gravity="center"
            android:text="@string/update_event"
            android:textColor="@color/AlmostBlack"/>
        <Button
            android:id="@+id/deleteEventBtn"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/design_default_color_error"
            android:radius="10dp"
            android:gravity="center"
            android:text="@string/delete_event"
            android:textColor="@color/AlmostBlack"/>
    </LinearLayout>
</RelativeLayout>